# 1DFEM

./: CMakeLists.txt
include/: assembler.hpp  eigen_includes.hpp  element.hpp  elements.hpp  fem_solver.hpp  force_vector.hpp  global_vector.hpp  hypoelastic_material.hpp  lagrange_element.hpp  local_vector.hpp  logging.hpp  mass_matrix.hpp  material.hpp  problem_data.hpp  program.hpp  quadrature_data.hpp  screen_writer.hpp  stress.hpp
src/: 1DFEM.cpp  CMakeLists.txt  assembler.cpp  element.cpp  fem_solver.cpp  force_vector.cpp  global_vector.cpp  hypoelastic_material.cpp  lagrange_element.cpp  local_vector.cpp  mass_matrix.cpp  material.cpp  problem_data.cpp  program.cpp  quadrature_data.cpp  screen_writer.cpp  stress.cpp
